# senseglove

./: .gitignore  LICENSE  README.md  USAGE.md  requirements.txt
SenseGlove-API-master/: CMakeLists.txt
SenseGlove-API-master/examples/: sgcore-client.cpp
docker/: DOCKER.md  (+3 more)
senseglove/senseglove_bringup/: CMakeLists.txt  package.xml
senseglove/senseglove_bringup/config/: calibration.yaml  gloves.yaml
senseglove/senseglove_bringup/launch/: finger_distance.launch.py  senseglove.launch.py
senseglove/senseglove_bringup/scripts/: glove_connect.sh  glove_disconnect.sh
senseglove/senseglove_control/senseglove_hardware/: CMakeLists.txt  package.xml
senseglove/senseglove_control/senseglove_hardware/include/senseglove_hardware/: actuation_mode.hpp  actuation_type.hpp  joint.hpp  senseglove_robot.hpp
senseglove/senseglove_control/senseglove_hardware/src/: joint.cpp  senseglove_robot.cpp
senseglove/senseglove_control/senseglove_hardware_builder/: CMakeLists.txt  package.xml
senseglove/senseglove_control/senseglove_hardware_builder/include/senseglove_hardware_builder/: allowed_robot.hpp  hardware_builder.hpp
senseglove/senseglove_control/senseglove_hardware_builder/robots/: dk1_left.yaml  dk1_right.yaml  nova2_left.yaml  nova2_right.yaml  nova_left.yaml  nova_right.yaml
senseglove/senseglove_control/senseglove_hardware_builder/src/: hardware_builder.cpp
senseglove/senseglove_control/senseglove_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml
senseglove/senseglove_control/senseglove_hardware_interface/config/dk1_left/: controllers.yaml
senseglove/senseglove_control/senseglove_hardware_interface/config/dk1_right/: controllers.yaml
senseglove/senseglove_control/senseglove_hardware_interface/launch/: hardware.launch.py
senseglove/senseglove_control/senseglove_hardware_interface/src/: senseglove_hardware_interface.cpp
senseglove/senseglove_control/senseglove_state_broadcaster/: CMakeLists.txt  package.xml  plugin.xml
senseglove/senseglove_control/senseglove_state_broadcaster/src/: senseglove_state_broadcaster.cpp
senseglove/senseglove_description/: CMakeLists.txt  package.xml
senseglove/senseglove_description/launch/: display.launch.py
senseglove/senseglove_description/meshes/nova/: index_brake.stl  ring_brake.stl  ring_flexion_one.stl
senseglove/senseglove_description/meshes/nova2/: index_flexion_two.stl  middle_flexion_one.stl  middle_flexion_three.stl  middle_flexion_two.stl  palm_strap.stl  pinky_flexion_one.stl  pinky_flexion_three.stl  ring_flexion_two.stl  thumb_flexion_three.stl
senseglove/senseglove_description/ros2_control/dk1/: dk1_left.ros2_control.xacro  dk1_right.ros2_control.xacro
senseglove/senseglove_description/ros2_control/nova/: nova_left.ros2_control.xacro  nova_right.ros2_control.xacro
senseglove/senseglove_description/ros2_control/nova2/: nova2_left.ros2_control.xacro  nova2_right.ros2_control.xacro
senseglove/senseglove_description/rviz/: urdf_both.rviz  urdf_left.rviz  urdf_right.rviz
senseglove/senseglove_description/urdf/dk1/: dk1_left.description.xacro  dk1_left.urdf.xacro  dk1_right.description.xacro  dk1_right.urdf.xacro
senseglove/senseglove_description/urdf/nova/: nova_left.description.xacro  nova_left.urdf.xacro  nova_right.description.xacro  nova_right.urdf.xacro
senseglove/senseglove_description/urdf/nova2/: nova2_left.description.xacro  nova2_left.urdf.xacro  nova2_right.description.xacro  nova2_right.urdf.xacro
senseglove/senseglove_description/urdf/urdf_helper_macros/: joint_interfaces_macro.xacro
senseglove/senseglove_interaction/: CMakeLists.txt  package.xml  setup.cfg  setup.py
senseglove/senseglove_interaction/senseglove_interaction/common/: cyclonedds_hand_state_subscriber.py  imu_tf_broadcaster.py
senseglove/senseglove_interaction/senseglove_interaction/finger_distance/: calibration_manager.py  finger_distance_calibration.py  finger_distance_node.py  finger_tip_vector.py
senseglove/senseglove_interaction/senseglove_interaction/haptics/: haptics_node.py  nova2_vibration_node.py  nova2_vibration_player.py
senseglove/senseglove_msgs/: CMakeLists.txt  package.xml
senseglove/senseglove_msgs/msg/: FingerDistanceFloats.msg  KinematicsVect3D.msg  Nova2WaveformCommand.msg  SenseGloveState.msg
senseglove/senseglove_msgs/srv/: Calibrate.srv
senseglove_api/: CMakeLists.txt  LICENSE  package.xml
senseglove_api/include/SenseGlove/BLE/: Platform.hpp  SGBLExx.hpp  sgble.h  sgble.hpp
senseglove_api/include/SenseGlove/Connect/: Android.hpp  BleInfo.hpp  BleUtil.hpp  Connection.hpp  ConnectionData.hpp  ConnectionFactory.hpp  ConnectionTester.hpp  ConnectionsTracker.hpp  Debugger.hpp  DeviceScanner.hpp  EFWErrorCodes.hpp  ExitCodes.hpp  FirmwareUploader.hpp  HapticResponse.hpp  IdResponse.hpp  IpcCommand.hpp  NewSGDevice.hpp  Nova2BleDevice.hpp  Platform.hpp  PortInfo.hpp  SGBleDevice.hpp  SGConnect.hpp  SGDevice.hpp  SerialConnection.hpp  SerialPorts.hpp  SharedMem.hpp  StringUtils.hpp  TestingState.hpp  TransmissionMode.hpp
senseglove_api/include/SenseGlove/Core/: Anatomy.hpp  Android.hpp  BasicHandModel.hpp  BetaDevice.hpp  BuzzCommand.hpp  CVHandDataSmoother.hpp  CVHandLayer.hpp  CVHandTrackingData.hpp  CVKinematics.hpp  CVProcessedHandData.hpp  CalibrationDataPoint.hpp  Communications.hpp  ConnectionStatus.hpp  CustomWaveform.hpp  Debugger.hpp  DeviceList.hpp  DeviceModel.hpp  DeviceTypes.hpp  FileIO.hpp  FingerCommand.hpp  Fingers.hpp  FloatUtils.hpp  ForceFeedbackCommand.hpp  HandInterpolator.hpp  HandLayer.hpp  HandPose.hpp  HandProfile.hpp  HapticChannelInfo.hpp  HapticGlove.hpp  HapticGloveCalibrationCheck.hpp  HapticGloveCalibrationSequence.hpp  HapticGloveCommandBuffer.hpp  HapticGloveHandProfiles.hpp  HapticGloveQuickCalibration.hpp  InterpolationSet.hpp  JointKinematics.hpp  Library.hpp  MathDefines.hpp  NormalizationState.hpp  Nova2Glove.hpp  (+35 more)
senseglove_api/lib/Ubuntu/x86-64/release/: libserial.so~merged
senseglove_api/src/: sg_tester.cpp
senseglove_com/: CMakeLists.txt  package.xml
senseglove_com/SenseCom/Linux/SenseCom_Linux_Latest/: versionInfo.txt
(+48 files in other folders)
