<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>senseglove_bringup</name>
    <version>2.0.0</version>
    <description>Launch files for SenseGlove</description>
    <maintainer email="akshay@senseglove.com">Akshay Radhamohan Menon</maintainer>
    <license>MIT</license>

    <!-- Build tool -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- runtime dependencies -->
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>rviz2</exec_depend>

    <exec_depend>senseglove_description</exec_depend>
    <exec_depend>senseglove_interaction</exec_depend>
    <exec_depend>senseglove_hardware_interface</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
