<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senseglove_description</name>
  <version>2.0.0</version>
  <description>Provides descriptive features of the SenseGlove (URDF, meshes, RViz)</description>
  <maintainer email="akshay@senseglove.com">Akshay Radhamohan Menon</maintainer>
  <license>MIT</license>

  <!-- ament build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- xacro at build & runtime to generate & use URDF -->
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
