<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>senseglove_state_broadcaster</name>
  <version>2.0.0</version>
  <description>Publishes SenseGloveState from hardware state interfaces.</description>
  <maintainer email="akshay@senseglove.com">SenseGlove</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>senseglove_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>

</package>